[package]
name = "orbolay"
version = "1.1.0"
edition = "2024"

[profile.release]
lto = true
strip = "debuginfo"

[package.metadata.packager]
product-name = "Orbolay"
identifier = "dev.spikehd.orbolay"
out-dir = "bins"
log-level = "debug"
formats = ["all"]

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
dioxus = { version = "0.6.3", features = ["hooks"] }
display-info = "0.5.5"
flume = "0.11.1"
freya = { git = "https://github.com/marc2332/freya.git", rev = "881b565a4c14ddd5c8dc47ce738d2a0543a58bd4" }
gumdrop = "0.8.1"
native-dialog = { version = "0.9.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
serde = "1.0.219"
serde_json = "1.0.141"
skia-safe = "0.87"
sysinfo = { version = "0.37.0", default-features = false, features = ["user", "system"] }
tungstenite = "0.27"
ureq = "3.0.12"
winit = "0.30"

[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = { version = "0.5", features = ["unstable_grab"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.61.3"
